CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(signal)

SET( CMAKE_BUILD_TYPE DEBUG )

#SET( CMAKE_C_COMPILER clang++ )
#SET( CMAKE_CXX_COMPILER clang++ )
SET( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=native" )
SET( CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -pedantic -DGLIBCXX_DEBUG -fsanitize=address -fno-optimize-sibling-calls -fno-omit-frame-pointer" )
SET( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_CXX_FLAGS} -std=c++11" )
SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${CMAKE_C_FLAGS_DEBUG}" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}" )

SET( CMAKE_EXPORT_COMPILE_COMMANDS on )

#INCLUDE_DIRECTORIES( )
#ADD_EXECUTABLE(bin_signal main.cpp)
ADD_LIBRARY(stack_trace SHARED stack_trace.cpp)

#TARGET_LINK_LIBRARIES( bin_signal stack_trace)
TARGET_LINK_LIBRARIES( stack_trace bfd )

